test: add mockup endpoint to test CD pipeline
